import_files-Macro further improved and tested.

--- a/.fs_watcher.conf
+++ b/.fs_watcher.conf
@@ -3,7 +3,7 @@
   "isClearConsole": false,
   "watchFiles": [
     "src/",
-    "tests/test_all.nim"
+    "tests/"
   ],
   "command": [
     "nimble", "test"
