--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,7 @@ jobs:
       run:  ./nimporter-dev.sh nim compile --out:../nimporter_dist/debug/nimporter_tests --run tests/test_all.nim
     - name: Run tests (release, using nim compile) ...
       run:  ./nimporter-dev.sh nim compile --out:../nimporter_dist/release/nimporter_tests -d:release --opt:speed --run tests/test_all.nim
+    - name: Build Documentation ...
+      run:  ./nimporter-dev.sh nim doc --out:../nimporter_dist/doc/nimporter.html src/nimporter.nim
+    - name: Be nice to github and remove Docker-Image ...
+      run:  docker rmi nimporter/dev-system:1.0
